    - Remove incorrect use of opf:scheme from dc:creator and dc:contributor under epub2
    - Fix issues with hunspell spell checking under Windows when non-ascii paths to dictionaries
    - Fix issues with overridding the prefs directory on Windows with non-ascii paths
    - Fix broken manual "Check" button on W3C stylesheet validation's generated html form.

   New Features
    - Allow user to choose what level of CSS gets used in the "Validate Stylesheets
         With W3C" tool via user preference (General).

Sigil-0.9.4
   Bug Fixes
    - Prevent the use of zero length key fields when obfuscating fonts
    - IDPF font obfuscation key accepts all input except as specified
    - Fix typo in main.ui accelerator assignment
    - Update Transifex project URL
    - Prevent NCX Weirdness with ampersand added when editing NCX in codeview and TOC widget showing
    - Fix lost namespace attributes on metadata tag
    - Allow auto conversion from package version 1.0 to 2.0
    - Remove unused parameter from gumbo create_text_node
    - Fix bug that hits package version when no xml declaration on opf on import
    - Add id to Heading structure to greatly speed up NCX/TOC creation even more
    - Only the true nav should ever have the nav manifest property set
    - Prevent nav property from being overwritten when updating manifest properties
    - Prevent segfault if user add semantics but never chooses one
    - Prevent Add Cover from returning the wrong doctype for epub3
    - Make sure cover-image and svg (if needed) are added as epub3 manifest properties when adding a cover
    - Make sure all referenced resources are found for Delete Unused Media
    - Remap non-standard epub namespace prefixes in the opf to those now reserved for epub3
    - Make loading epubs with broken opf files more robust

   New Features
    - Extract all MarcRelators related code into its own class so it can be shared
    - Added some missing MARC relators