@@ -5,6 +5,7 @@ Sigil-0.9.5
     - Fix issues with hunspell spell checking under Windows when non-ascii paths to dictionaries
     - Fix issues with overridding the prefs directory on Windows with non-ascii paths
     - Fix broken manual "Check" button on W3C stylesheet validation's generated html form.
+    - Fix media-type recognition for .m4a and .m4v file extenstions in main Sigil and plugin code
 
    New Features
     - Allow user to choose what level of CSS gets used in the "Validate Stylesheets
